personalsite-fix alignment

--- a/personalsite/stylesheets/style.css
+++ b/personalsite/stylesheets/style.css
@@ -113,7 +113,7 @@ body,html{
 	font-size: 14pt;
 	display: inline-block;
 	border: solid 2px black;
-	width: 340px;
+	width: 336px;
 	height: 60px;
 	line-height: 60px;
 	text-align: center;
